Scaling on mobile fixed for home page

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body, html {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 1.2vw;
+  font-size: 1.5vw;
   z-index: 300;
 }
 
@@ -68,9 +68,9 @@ body, html {
 }
 
 #name {
-  padding-top: 200px;
+  padding-top: 150px;
   text-align: center;
-  font-size: 3vw;
+  font-size: 5vw;
   font-weight: bold;
   z-index: 200;
   height: 100px;
@@ -78,8 +78,9 @@ body, html {
 }
 
 #aboutMe {
+  padding: 25px;
   text-align: center;
-  font-size: 1.5vw;
+  font-size: 1.8vw;
   z-index: 200;
   background: transparent; 
 }
